objects/Booking__c/fields/Authentic_Code__c.field-meta.xml
<CustomField>
    <fullName>Authentic_Code__c</fullName>
    <label>Authentic Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>