objects/Booking__c/fields/B_L_No__c.field-meta.xml
<CustomField>
    <fullName>B_L_No__c</fullName>
    <label>B/L No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>