objects/Booking__c/fields/CBM_request__c.field-meta.xml
<CustomField>
    <fullName>CBM_request__c</fullName>
    <label>CBM request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>