objects/Booking__c/fields/Customer_s_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Expectation__c</fullName>
    <label>Customer&apos;s Expectation</label>
    <type>TextArea</type>
</CustomField>