objects/Booking__c/fields/CUSTOMS_CLEARANCE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMS_CLEARANCE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CUSTOMS CLEARANCE</label>
    <type>Checkbox</type>
</CustomField>