objects/Booking__c/fields/DEFER_YOUR_CARGO_PAYMENT__c.field-meta.xml
<CustomField>
    <fullName>DEFER_YOUR_CARGO_PAYMENT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEFER YOUR CARGO PAYMENT</label>
    <type>Checkbox</type>
</CustomField>