objects/Booking__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>