objects/Booking__c/fields/INSURANCE__c.field-meta.xml
<CustomField>
    <fullName>INSURANCE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INSURANCE</label>
    <type>Checkbox</type>
</CustomField>