objects/Booking__c/fields/Master_Consol__c.field-meta.xml
<CustomField>
    <fullName>Master_Consol__c</fullName>
    <formula>Vessel_schedule__r.MasterConsol__r.Name</formula>
    <label>Master Consol</label>
    <type>Text</type>
</CustomField>