objects/Booking__c/fields/Ocean_Freight_FCY__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight_FCY__c</fullName>
    <formula>Vessel_schedule__r.Ocean_Freight_FCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ocean Freight (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>