objects/Booking__c/fields/OFFSET_YOUR_CARBON_FOOTPRINT__c.field-meta.xml
<CustomField>
    <fullName>OFFSET_YOUR_CARBON_FOOTPRINT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OFFSET YOUR CARBON FOOTPRINT</label>
    <type>Checkbox</type>
</CustomField>