objects/Booking__c/fields/Pick_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Date__c</fullName>
    <label>Pick up Date</label>
    <type>Date</type>
</CustomField>