objects/Booking__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>POD</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Bookings (POD)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>