objects/Booking__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>POL</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>