objects/Booking__c/fields/PRE_SHIPMENT_INSPECTION_SERVICE__c.field-meta.xml
<CustomField>
    <fullName>PRE_SHIPMENT_INSPECTION_SERVICE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRE SHIPMENT INSPECTION SERVICE</label>
    <type>Checkbox</type>
</CustomField>