objects/Booking__c/fields/Register__c.field-meta.xml
<CustomField>
    <fullName>Register__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register</label>
    <type>Checkbox</type>
</CustomField>