objects/Booking__c/fields/Total_Freight__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight__c</fullName>
    <formula>If(Vessel_schedule__r.Ocean_Freight_FCY__c &gt; 0, (&quot;$&quot;&amp;Text(Vessel_schedule__r.Ocean_Freight_FCY__c* CBM_request__c )), (&quot;Refund $&quot; &amp; Text((Vessel_schedule__r.Ocean_Freight_FCY__c*(-1)* CBM_request__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Freight</label>
    <type>Text</type>
</CustomField>