objects/Booking__c/fields/Total_Price_at_Destination_Local__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_at_Destination_Local__c</fullName>
    <formula>CBM_request__c * Unit_Price_at_Destination_Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price at Destination (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>