objects/Booking__c/fields/Total_Price_at_Origin_FCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_at_Origin_FCY__c</fullName>
    <formula>CBM_request__c *  UnitPriceatOriginFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price at Origin (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>