objects/Booking__c/fields/Unit_Price_at_Origin_Local__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_at_Origin_Local__c</fullName>
    <formula>Vessel_schedule__r.Local_Charge__r.Total_Amount_of_Price_Local_in_Origin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price at Origin (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>