objects/Booking__c/fields/UnitPriceatDestinationFCY__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceatDestinationFCY__c</fullName>
    <formula>Vessel_schedule__r.Local_Charge__r.Total_Amount_of_Price_FCY_in_Des__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price at Destination (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>