objects/Booking__c/fields/Vessel_schedule__c.field-meta.xml
<CustomField>
    <fullName>Vessel_schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel schedule</label>
    <referenceTo>Vesselschedule__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>