objects/Booking__c/validationRules/CheckUserField.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckUserField</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(Isblank( Authentic_Code__c )),ISblank( User__c ))</errorConditionFormula>
    <errorMessage>Please Check Your Authentication Code</errorMessage>
</ValidationRule>