objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>POL__c</columns>
    <columns>POD__c</columns>
    <columns>CBM_request__c</columns>
    <columns>Master_Consol__c</columns>
    <columns>ETD__c</columns>
    <columns>ETA__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>